# quill

./: Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: pr-checks.yml
decks/: invalid_standard_deck.json  invalid_testing_deck.json  valid_standard_deck.json  valid_testing_deck.json
quill-cli/: Cargo.toml
quill-cli/src/: main.rs
quill-engine/: Cargo.toml
quill-engine/src/: lib.rs
quill-primitives/: Cargo.toml
quill-primitives/src/: cards.rs  decks.rs  lib.rs  test_utils.rs
src/: cards.rs  main.rs
