[workspace]
members = [
    "quill-primitives",
    "quill-engine",
    "quill-cli"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Max VelDink <maxveldink@gmail.com>"]
description = "A Lorcana toolbox for crafting experiences for Illumineers."
license = "MIT"
repository = "https://github.com/maxveldink/quill"
