[package]
name = "quill-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Basic type definitions for Lorcana"
license.workspace = true
repository.workspace = true

[dependencies]
itertools = "0.14"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
